# openrank-avs

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  docker-compose.yml  foundry.toml  op-manager.json  rust-toolchain.toml  trust.csv
anvil/: Dockerfile
broadcast/AddImageId.s.sol/17000/: run-1750966429.json  run-1751026838.json  run-1751031734.json  run-1751039114.json  run-latest.json
broadcast/AddImageId.s.sol/31337/: run-1747412160.json  run-1747413177.json  run-1747414510.json  run-1747416451.json  run-1747428015.json  run-1747667390.json  run-1747669280.json  run-1747687553.json  run-1747689800.json  run-1747730474.json  run-1747733523.json  run-1747743990.json  run-1747751868.json  run-1747755651.json  run-1747764157.json  run-1747839748.json  run-1747843010.json  (+14 more)
common/: Cargo.toml
common/src/: eigenda.rs  lib.rs  logs.rs
contracts/config/: deploy_eigenlayer_core.config.json
contracts/script/: AddImageId.s.sol  CreateMockJobs.s.sol  DeployAVS.sol  DeployAVSBase.sol  DeployCore.s.sol  DeployCoreAndRxp.s.sol  DeployEigenLayerCore.s.sol  DeployOpenRank.s.sol  DeployOpenRankAVS.s.sol  DeployOpenRankLocal.s.sol  DeployOpenRankManager.s.sol  DeployOpenRankTestnet.s.sol  DeployRxp.s.sol  OpenRankManager.s.sol  deploy_avs.s.sol  deploy_eigenlayer_core.s.sol  deploy_rxp.s.sol
contracts/src/: CertificateVerifier.sol  IOpenRankManager.sol  IOpenRankServiceManager.sol  OpenRankManager.sol  OpenRankManagerStorage.sol  OpenRankServiceManager.sol  ReexecutionEndpoint.sol  ReexecutionEndpointStorage.sol  ReexecutionSlasher.sol  ReservationRegistry.sol  ReservationRegistryStorage.sol
contracts/test/: OpenRankManager.t.sol  OpenRankServiceManager.t.sol  RxpDeploySetup.t.sol  RxpTestHelpers.t.sol
node/: Cargo.toml  Dockerfile  Dockerfile.node-challenger  Dockerfile.node-computer  Dockerfile.optimized  Dockerfile.rxp  Dockerfile.shared  build.rs  docker-compose.yml
node/proto/: rxp.proto
node/src/: challenger.rs  computer.rs  error.rs  lib.rs  main.rs  sol.rs
scripts/: 0_deploy_openrank.sh  1_run_eigenda_proxy.sh  2_run_archiver_rxp_node.sh  2_run_rxp_node.sh  3_add_image.sh  3_register_rxp_no.sh  4_add_image.sh  add_image_id.sh  build_images.sh  build_optimized.sh  deploy_openrank.sh  get_openrank_info.sh  master_holesky.sh  master_local.sh  operator_holesky.yaml  operator_local.yaml  publish_sdk.sh  register_eigenverify_operator.sh  register_no.sh  run_eigenda_proxy.sh  run_rxp_node.sh  run_sdk.sh  run_sdk_holesky.sh  run_sdk_local.sh  shutdown.sh  start_openrank_nodes.sh  update_operator_table.sh  verify.sh
sdk/: Cargo.toml  build.rs
sdk/src/: actions.rs  eigenda-proxy.rs  main.rs  sol.rs
(+227 files in other folders)
