[package]
name = "openrank-sdk"
description = "SDK for OpenRank AVS"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
openrank-common = { workspace = true }

alloy = { workspace = true, features = ["signer-mnemonic"] }
alloy-rlp = { workspace = true }
clap = { workspace = true, features = ["derive"] }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenv = { workspace = true }
sha3 = { workspace = true }
csv = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
